--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Digital Clock</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <h2>Digital Clock</h2>
@@ -26,6 +26,6 @@
         <span id="ampm">AM</span>
       </div>
     </div>
-    <script src="index.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
